# Agent-loop

./: .env.example  .gitignore  CLAUDE.md  Makefile  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-agent-core-loop/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEWS.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-tool-system-biz-validation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-context-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: setup_demo_scenario.sh
src/loopai/: config.py  main.py
tests/: conftest.py  test_agents.py  test_bash_tool.py  test_checkpoint.py  test_circuit_breaker.py  test_cli_renderer.py  test_config.py  test_context_compressor.py  test_disk_cleanup.py  test_event_bus.py  test_failure_registry.py  test_fsm.py  test_guards.py  test_jsonl_logger.py  test_llm_client.py  test_schemas.py  test_token_counter.py  test_tools.py
tests/api/: __init__.py  conftest.py  test_control.py  test_integration.py  test_sessions.py  test_sse.py
(+102 files in other folders)
