[project]
name = "loopai"
version = "0.1.0"
description = "ReAct-based AI Agent framework with harness infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.12.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
